Test many roots

--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -28,7 +28,7 @@ if (NOT PPIDD AND (MPI AND LINEARALGEBRA_ARRAY_GA))
                 separate_arguments(ga-${f} NATIVE_COMMAND "${ga-${f}}")
             endforeach ()
             string(FIND "${ga-libs}" "-framework;Accelerate" ga-accelerate)
-            if (NOT ga_accelerate EQUAL -1)
+            if (NOT ga-accelerate EQUAL -1)
                 string(REPLACE ";-framework;Accelerate" "" ga-libs "${ga-libs}")
                 string(APPEND ga-ldflags ";-framework;Accelerate")
             endif ()
