--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -3,18 +3,12 @@ if (FORTRAN
         AND OFF # TODO reinstate Fortran examples when Fortran support is reinstated
         )
     set(ITERATIVESOLVER_FORTRAN_EXAMPLES
-            OptimizeExampleF.F90
-            DIISExampleF.F90
-            LinearEigensystemExampleF.F90
-            LinearEigensystemExampleF-Pspace.F90
             LinearEigensystemExampleF-Pspace-adaptive.F90
             LinearEquationsExampleF.F90
             )
 endif ()
-set(EXAMPLES DIISexample.cpp
-        OptimizeExample.cpp
+set(EXAMPLES
         LinearEigensystemExample.cpp LinearEigensystemExample-serial.cpp LinearEigensystemExample-Pspace-fixed-serial.cpp
-        LinearEquationsExample.cpp LinearEquationsExample-Pspace.cpp
         ${ITERATIVESOLVER_FORTRAN_EXAMPLES}
         )
 if (LINEARALGEBRA_ARRAY_MPI3 AND MPI)
