rename SubspaceSolverI to ISubspaceSolver for consistency

--- a/src/molpro/linalg/itsolv/subspace/CMakeLists.txt
+++ b/src/molpro/linalg/itsolv/subspace/CMakeLists.txt
@@ -1,4 +1,4 @@
 LibraryManager_Append(${PROJECT_NAME}
-        PUBLIC_HEADER PSpace.h QSpace.h DSpace.h IXSpace.h Matrix.h SubspaceData.h SubspaceSolverI.h
+        PUBLIC_HEADER PSpace.h QSpace.h DSpace.h IXSpace.h Matrix.h SubspaceData.h ISubspaceSolver.h
         gram_schmidt.h util.h XSpace.h Dimensions.h SubspaceSolverLinEig.h
         )
