add Options class to the interface for setting and getting options in the solvers
This allows setting and getting options via the base class and avoid bringing in header file with the full implementation.

--- a/src/molpro/linalg/itsolv/CMakeLists.txt
+++ b/src/molpro/linalg/itsolv/CMakeLists.txt
@@ -1,6 +1,6 @@
 LibraryManager_Append(${PROJECT_NAME}
         SOURCES Logger.cpp
-        PUBLIC_HEADER IterativeSolver.h IterativeSolverTemplate.h LinearEigensystem.h
+        PUBLIC_HEADER IterativeSolver.h IterativeSolverTemplate.h LinearEigensystem.h Options.h
         Logger.h wrap.h wrap_util.h propose_rspace.h util.h DSpaceResetter.h
         )
 add_subdirectory(subspace)
