--- a/src/molpro/linalg/itsolv/CMakeLists.txt
+++ b/src/molpro/linalg/itsolv/CMakeLists.txt
@@ -1,7 +1,7 @@
 LibraryManager_Append(${PROJECT_NAME}
         SOURCES Logger.cpp
-        PUBLIC_HEADER IterativeSolver.h IterativeSolverTemplate.h LinearEigensystem.h Options.h LinearEquations.h
+        PUBLIC_HEADER IterativeSolver.h IterativeSolverTemplate.h LinearEigensystem.h Optimize.h Options.h LinearEquations.h
         Logger.h wrap.h wrap_util.h propose_rspace.h util.h DSpaceResetter.h LinearEigensystemOptions.h CastOptions.h
-        LinearEquationsOptions.h
+        LinearEquationsOptions.h OptimizeOptions.h
         )
 add_subdirectory(subspace)
