--- a/src/molpro/linalg/itsolv/CMakeLists.txt
+++ b/src/molpro/linalg/itsolv/CMakeLists.txt
@@ -1,5 +1,5 @@
 LibraryManager_Append(${PROJECT_NAME}
-        SOURCES Logger.cpp
+        SOURCES Logger.cpp Options.cpp
         PUBLIC_HEADER IterativeSolver.h IterativeSolverTemplate.h LinearEigensystem.h Options.h LinearEquations.h
         Logger.h wrap.h wrap_util.h propose_rspace.h util.h DSpaceResetter.h LinearEigensystemOptions.h CastOptions.h
         LinearEquationsOptions.h SolverFactory.h SolverFactory-implementation.h
