--- a/test/itsolv/CMakeLists.txt
+++ b/test/itsolv/CMakeLists.txt
@@ -27,7 +27,12 @@ else ()
 endif ()
 
 foreach (t test_LinearEigensystem test_LinearEquations test_Optimize)
-    add_executable(${t}.exe ${t}.cpp ${t}F.f90 test.h SolverFactory_implementation.cpp)
+    add_executable(${t}.exe ${t}.cpp test.h SolverFactory_implementation.cpp)
+    if (FORTRAN)
+        target_sources(${t}.exe PRIVATE ${t}F.f90)
+    else()
+        target_compile_definitions(${t}.exe PRIVATE -DNOFORTRAN)
+    endif()
     target_link_libraries(${t}.exe PUBLIC molpro::${PROJECT_NAME} gmock_main)# ${MPI_CXX_LIBRARIES})
     target_link_libraries(${t}.exe PUBLIC Eigen3::Eigen)
     gtest_discover_tests(${t}.exe)
