LinearEigensystem -> LinearEigensystemDavidson, LinearEquations -> LinearEquationsDavidson, NonLinearEquations -> NonLinearEquationsDIIS with a view to one day writing LinearEquationsConjugateGradient or similar. Rename the corresponding option classes, LinearEigensystemDavidsonOptions etc.
Addresses #100

--- a/src/molpro/linalg/itsolv/CMakeLists.txt
+++ b/src/molpro/linalg/itsolv/CMakeLists.txt
@@ -1,10 +1,10 @@
 LibraryManager_Append(${PROJECT_NAME}
-        SOURCES util.cpp Logger.cpp Options.cpp LinearEigensystemOptions.cpp LinearEquationsOptions.cpp NonLinearEquationsDIISOptions.cpp OptimizeBFGSOptions.cpp OptimizeSDOptions.cpp
-        PUBLIC_HEADER IterativeSolver.h IterativeSolverTemplate.h LinearEigensystem.h Options.h LinearEquations.h
+        SOURCES util.cpp Logger.cpp Options.cpp LinearEigensystemDavidsonOptions.cpp LinearEquationsDavidsonOptions.cpp NonLinearEquationsDIISOptions.cpp OptimizeBFGSOptions.cpp OptimizeSDOptions.cpp
+        PUBLIC_HEADER IterativeSolver.h IterativeSolverTemplate.h LinearEigensystemDavidson.h Options.h LinearEquationsDavidson.h
         SOURCES Logger.cpp
-        PUBLIC_HEADER IterativeSolver.h IterativeSolverTemplate.h LinearEigensystem.h OptimizeBFGS.h OptimizeSD.h Options.h LinearEquations.h
-        Logger.h wrap.h wrap_util.h propose_rspace.h util.h DSpaceResetter.h LinearEigensystemOptions.h CastOptions.h
-        LinearEquationsOptions.h SolverFactory.h SolverFactory-implementation.h options_map.h
+        PUBLIC_HEADER IterativeSolver.h IterativeSolverTemplate.h LinearEigensystemDavidson.h OptimizeBFGS.h OptimizeSD.h Options.h LinearEquationsDavidson.h
+        Logger.h wrap.h wrap_util.h propose_rspace.h util.h DSpaceResetter.h LinearEigensystemDavidsonOptions.h CastOptions.h
+        LinearEquationsDavidsonOptions.h SolverFactory.h SolverFactory-implementation.h options_map.h
         OptimizeBFGSOptions.h OptimizeSDOptions.h
         NonLinearEquationsDIISOptions.h
         )
