--- a/test/array/CMakeLists.txt
+++ b/test/array/CMakeLists.txt
@@ -2,10 +2,12 @@ file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/data)
 foreach (fil empty_file inner_group_dataset.hdf5 single_dataset.hdf5)
     configure_file("data/${fil}" "${CMAKE_CURRENT_BINARY_DIR}/data/${file}" COPYONLY)
 endforeach ()
-add_executable(test-${PROJECT_NAME}-HDF5Handle.exe testHDF5Handle.cpp)
-target_link_libraries(test-${PROJECT_NAME}-HDF5Handle.exe PUBLIC molpro::${PROJECT_NAME} gmock_main)
-target_compile_definitions(test-${PROJECT_NAME}-HDF5Handle.exe PUBLIC "ARRAY_DATA=\"${CMAKE_CURRENT_BINARY_DIR}/data\"")
-gtest_discover_tests(test-${PROJECT_NAME}-HDF5Handle.exe)
+if (LINEARALGEBRA_ARRAY_HDF5)
+    add_executable(test-${PROJECT_NAME}-HDF5Handle.exe testHDF5Handle.cpp)
+    target_link_libraries(test-${PROJECT_NAME}-HDF5Handle.exe PUBLIC molpro::${PROJECT_NAME} gmock_main)
+    target_compile_definitions(test-${PROJECT_NAME}-HDF5Handle.exe PUBLIC "ARRAY_DATA=\"${CMAKE_CURRENT_BINARY_DIR}/data\"")
+    gtest_discover_tests(test-${PROJECT_NAME}-HDF5Handle.exe)
+endif()
 
 add_executable(test-${PROJECT_NAME}-Span.exe testSpan.cpp)
 target_link_libraries(test-${PROJECT_NAME}-Span.exe PUBLIC molpro::${PROJECT_NAME} gmock_main)
