--- a/src/molpro/linalg/array/util/CMakeLists.txt
+++ b/src/molpro/linalg/array/util/CMakeLists.txt
@@ -1,6 +1,13 @@
 LibraryManager_Append(${PROJECT_NAME}
-        SOURCES temp_file.cpp temp_hdf5_handle.cpp
-        PUBLIC_HEADER Distribution.h select_max_dot.h temp_file.h temp_hdf5_handle.h TempHandle.h)
+        SOURCES temp_file.cpp
+        PUBLIC_HEADER Distribution.h select_max_dot.h temp_file.h TempHandle.h)
+
+if (LINEARALGEBRA_ARRAY_HDF5)
+    LibraryManager_Append(${PROJECT_NAME}
+            SOURCES temp_hdf5_handle.cpp
+            PUBLIC_HEADER temp_hdf5_handle.h)
+endif()
+
 if (MPI)
     LibraryManager_Append(${PROJECT_NAME}
             SOURCES DistrFlags.cpp
