fix cmake discovery of file paths

--- a/test/itsolv/CMakeLists.txt
+++ b/test/itsolv/CMakeLists.txt
@@ -8,9 +8,12 @@ gtest_discover_tests(test-${PROJECT_NAME}-itsolv.exe)
 
 foreach (example bh hf phenol he)
     foreach (suffix h0 hamiltonian)
-        set(_file ../../examples/${example}.${suffix})
+        get_filename_component(_file ../../examples/${example}.${suffix} REALPATH)
         if (EXISTS ${_file})
+            message(DEBUG "Copying ${_file}")
             file(COPY ${_file} DESTINATION .)
+        else ()
+            message(DEBUG "Not copying ${_file}")
         endif ()
     endforeach ()
 endforeach ()
