Correct configuration for serial

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,8 +7,7 @@ build100:
   tags:
     - linux-farm
   rules:
-    when:
-      - never # TODO complete Fortran Serial implementation
+    - when: never # TODO complete Fortran Serial implementation
   timeout: 60m
   script:
     - BUILDTYPE=Release
