--- a/test/itsolv/CMakeLists.txt
+++ b/test/itsolv/CMakeLists.txt
@@ -1,22 +1,13 @@
 add_executable(test-${PROJECT_NAME}-itsolv.exe test_wrap.cpp test_util.cpp testDSpaceResetter.cpp test_SolverFactory.cpp
         test_options_map.cpp test_Options.cpp SolverFactory_implementation.cpp
         test_Interpolate.cpp
-        test_RSPT.cpp
         )
 target_link_libraries(test-${PROJECT_NAME}-itsolv.exe PUBLIC molpro::${PROJECT_NAME} gmock_main)
 gtest_discover_tests(test-${PROJECT_NAME}-itsolv.exe)
 
-foreach (example bh hf phenol he)
-    foreach (suffix h0 hamiltonian)
-        get_filename_component(_file ../../examples/${example}.${suffix} REALPATH)
-        if (EXISTS ${_file})
-            message(DEBUG "Copying ${_file}")
-            file(COPY ${_file} DESTINATION .)
-        else ()
-            message(DEBUG "Not copying ${_file}")
-        endif ()
-    endforeach ()
-endforeach ()
+file(COPY ../../examples/bh.hamiltonian DESTINATION .)
+file(COPY ../../examples/hf.hamiltonian DESTINATION .)
+file(COPY ../../examples/phenol.hamiltonian DESTINATION .)
 if (NOT TARGET Eigen3::Eigen)
     message(VERBOSE "Eigen3::Eigen is not yet a target")
     find_package(Eigen3 3.3.0 QUIET)
@@ -40,9 +31,9 @@ foreach (t test_LinearEigensystem test_LinearEquations test_Optimize)
     add_executable(${t}.exe ${t}.cpp test.h SolverFactory_implementation.cpp)
     if (FORTRAN)
         target_sources(${t}.exe PRIVATE ${t}F.f90)
-    else ()
+    else()
         target_compile_definitions(${t}.exe PRIVATE -DNOFORTRAN)
-    endif ()
+    endif()
     target_link_libraries(${t}.exe PUBLIC molpro::${PROJECT_NAME} gmock_main)# ${MPI_CXX_LIBRARIES})
     target_link_libraries(${t}.exe PUBLIC Eigen3::Eigen)
     gtest_discover_tests(${t}.exe)
