try to find lapacke

--- a/src/molpro/linalg/CMakeLists.txt
+++ b/src/molpro/linalg/CMakeLists.txt
@@ -61,6 +61,11 @@ endif ()
 if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "PGI")
     set(EIGEN_DONT_VECTORIZE ON)
 endif ()
+set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH};${CMAKE_SOURCE_DIR}/cmake")
+message("CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}")
+find_package(LAPACKE)
+message("LAPACKE_FOUND: ${LAPACKE_FOUND}")
+target_link_libraries(${PROJECT_NAME} PRIVATE ${LAPACKE_LIBRARIES})
 
 target_link_libraries(${PROJECT_NAME} PUBLIC Eigen3::Eigen)
 target_compile_definitions(${PROJECT_NAME} PUBLIC -DEIGEN_MPL2_ONLY)
