--- a/src/molpro/linalg/CMakeLists.txt
+++ b/src/molpro/linalg/CMakeLists.txt
@@ -61,7 +61,7 @@ endif ()
 if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "PGI")
     set(EIGEN_DONT_VECTORIZE ON)
 endif ()
-set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH};${CMAKE_SOURCE_DIR}/cmake")
+set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH};${CMAKE_CURRENT_SOURCE_DIR}/../../../cmake")
 message("CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}")
 find_package(LAPACKE)
 message("LAPACKE_FOUND: ${LAPACKE_FOUND}")
