Updated BLAS and LAPACK discovery

--- a/src/molpro/linalg/CMakeLists.txt
+++ b/src/molpro/linalg/CMakeLists.txt
@@ -63,9 +63,6 @@ if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "PGI")
 endif ()
 set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH};${CMAKE_CURRENT_SOURCE_DIR}/../../../cmake")
 message("CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}")
-find_package(LAPACKE)
-message("LAPACKE_FOUND: ${LAPACKE_FOUND}")
-target_link_libraries(${PROJECT_NAME} PRIVATE ${LAPACKE_LIBRARIES})
 
 target_link_libraries(${PROJECT_NAME} PUBLIC Eigen3::Eigen)
 target_compile_definitions(${PROJECT_NAME} PUBLIC -DEIGEN_MPL2_ONLY)
@@ -75,8 +72,8 @@ endif ()
 
 
 include(LibraryManagerUtils)
-print_target_properties(BLAS::BLAS DEBUG)
-print_target_properties(LAPACK::LAPACK DEBUG)
+print_target_properties(BLAS::BLAS STATUS)
+print_target_properties(LAPACK::LAPACK )
 print_target_properties(Eigen3::Eigen DEBUG)
 print_target_properties(ga::ga DEBUG)
 print_target_properties(ppidd::ppidd DEBUG)
