Example that shows the use of an external container for both R and Q vectors.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -68,3 +68,5 @@ endif ()
 
 file(COPY bh.hamiltonian DESTINATION .)
 file(COPY hf.hamiltonian DESTINATION .)
+
+add_subdirectory(foreign-container)
