--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -8,6 +8,11 @@ if (FORTRAN
 endif ()
 set(EXAMPLES
         LinearEigensystemExample-serial.cpp
+        LinearEigensystemExample.cpp
+        LinearEigensystemMultirootExample.cpp
+        LinearEquationsExample.cpp
+        NonLinearEquationsExample.cpp
+        OptimizeExample.cpp
         ${ITERATIVESOLVER_FORTRAN_EXAMPLES}
         )
 if (LINEARALGEBRA_ARRAY_MPI3 AND MPI)
@@ -30,7 +35,7 @@ endif ()
 foreach (fil ${EXAMPLES})
     get_filename_component(nam ${fil} NAME_WE)
     set(test_name ${PROJECT_NAME}-${nam})
-    add_executable(${test_name} ${fil} dummy.cpp)
+    add_executable(${test_name} ${fil} dummy.cpp SolverFactory_implementation.cpp)
     set_target_properties(${test_name}
             PROPERTIES
             RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}
