--- a/test/itsolv/CMakeLists.txt
+++ b/test/itsolv/CMakeLists.txt
@@ -2,6 +2,7 @@ add_executable(test-${PROJECT_NAME}-itsolv.exe test_wrap.cpp test_util.cpp testD
         test_options_map.cpp test_Options.cpp SolverFactory_implementation.cpp
         test_Interpolate.cpp
         test_RSPT.cpp
+        test_simplified.cpp
         )
 target_link_libraries(test-${PROJECT_NAME}-itsolv.exe PUBLIC molpro::${PROJECT_NAME} gmock_main)
 gtest_discover_tests(test-${PROJECT_NAME}-itsolv.exe)
